--- a/MERN_System/package.json
+++ b/MERN_System/package.json
@@ -1,10 +1,13 @@
 {
   "name": "mern_system",
   "version": "1.0.0",
+  "type": "module",
   "description": "mern project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Dulakshi",
   "license": "ISC",
@@ -17,4 +20,5 @@
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
+  
 }
